# lldbui

./: Cargo.toml  LICENSE  README.md  TODO.md  build.rs  wrapper.h
src/: app.rs  cli.rs  debug_session.rs  debugger.rs  defines.rs  main.rs  resources.rs
src/app/: egui_app.rs  frame_history.rs  mod.rs
src/app/components/: bottom_bar.rs  bottom_panel.rs  breakpoints.rs  close_confirmation_dialog.rs  console_tabs.rs  frames.rs  left_panel.rs  mod.rs  process_info.rs  source_view.rs  threads.rs  top_bar.rs  variables.rs
src/app/widgets/: ansi_string.rs  icon_arrow.rs  icon_breakpoint.rs  icon_button.rs  mod.rs  variable_list.rs
