[package]
name = "lldbui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.27.0", default-features = false }
eframe = "0.27.0"
egui_extras = { version = "0.27.2", features = ["syntect"] }
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
lldb = "0.0.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[patch.crates-io]
lldb = { git = 'https://github.com/roccoblues/lldb.rs' }
